[project]
name = "akshareproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "akshare==1.17.83",
    "db>=0.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "ollama==0.6.0",
    "pandas-stubs==2.3.2.250926",
    "seaborn>=0.13.2",
    "tushare==1.4.24",
]
